npm audit fix --force

--- a/package.json
+++ b/package.json
@@ -158,15 +158,15 @@
     }
   },
   "devDependencies": {
-    "typescript": "2.9.1",
+    "@types/linq": "2.2.33",
     "@types/minimatch": "^3.0.1",
     "@types/node": "10.3.2",
-    "@types/linq": "2.2.33"
+    "typescript": "2.9.1"
   },
   "dependencies": {
-    "vscode": "^1.1.21",
+    "linq": "3.1.0",
     "minimatch": "^3.0.4",
-    "ts-simple-ast": "^16.0.2",
-    "linq": "3.1.0"
+    "ts-simple-ast": "^9.5.0",
+    "vscode": "^0.9.9"
   }
 }
